# picture-lab-lxm

./: .gitignore  CAlc-D8T-dragon.html  CAtm-FGH-specbox.html  CGts-W0L-sweep.html  PAac-B01-skins.html  PAfm-SWE-neongirl.html  PAjg-MZY-nightstreet.html  PAkp-4DO-bluehand.html  PAmsk-R65-christmas.html  PAtm-2QQ-space.html  PWarr-VWE-helenjohn.html  Pbri-H34-sunflower.html  Pgra-O1K-snowfire.html  README.md  about.html  index.html  lxmpicturelab-set.al.html  lxmpicturelab.al.sorted-color.bg-black.html  main.css  pyproject.toml  setup.py
.assets-in/: CAlc-D8T-dragon.json  PAds-4HS-testbench.json  PAjg-MZY-nightstreet.json  PAkp-4DO-bluehand.json  PAmsk-R65-christmas.json  PAtm-B2W-fire.json  PWarr-VWE-helenjohn.json  PWdc-85R-braidmaker.json  PWsjw-7QC-watchmaker.json  PWsjw-90G-icecave.json  Pbri-H34-sunflower.json
assets/: README.md
assets/CAaf-Z37-legomovie/: CAaf-Z37-legomovie.json
assets/CAtm-FGH-specbox/: CAtm-FGH-specbox.json
assets/CGts-W0L-sweep/: CGts-W0L-sweep.json
assets/Cblr-GFD-spring/: Cblr-GFD-spring.json
assets/PAac-B01-skins/: PAac-B01-skins.json
assets/PAfl-H6O-night/: PAfl-H6O-night.json
assets/PAfl-IP1-candle/: PAfl-IP1-candle.json
assets/PAfl-UY7-garden/: PAfl-UY7-garden.json
assets/PAfm-SWE-neongirl/: PAfm-SWE-neongirl.json
libraries/lxmpicturelab/: __init__.py  (+10 more)
scripts/: asset-generate.py  asset-in-ingest.py  comparisons-generate.py  debayer-raw.py  ingest-assets-int.py  renderer-build.py  sets-generate.py
site/: about.html  base.html  comparison.html  index.html  main.css  site-build.py  site-publish.py  site-serve.py
(+12 files in other folders)
